
- Added a number of new "get" methods, including era, year_with_era,
hour_1, hour_12, hour_12_0, weekday_of_month, and week_of_month.
Based in part on a patch from Rick Measham.

- Now any object method can be called in strftime format by using
"%{method}" as a format specifier.  Patch from Rick Measham

- Added an is_zero method to DateTime::Duration, for objects of zero
length.

[ BUG FIXES ]

- Fix epoch() method to work properly with dates greater than 50 years
ago.  Apparently, if Time::Local is given a year less than 100, it
tries to guess the century, and it doesn't do this by simply adding
1900.  Numbers less than 53 (for the year 2003) are treated as being
in the current century.  Ugh.

- Fixed compilation on HPUX.  Patch from Dan Sully.

- Fixed problem with use of finite() function on Windows.  Some tests
still fail because apparently Windows thinks that (infinity -
infinity) = 0 instead of NaN.

- The last_day_of_month() method did not accept nanosecond or
fractional_second parameters.

- A DT::Duration object created with just nanoseconds was always
positive, regardless of the value given for nanoseconds.

- Fixed a serious bug when subtracting one datetime from another that
could cause the result to be off by up to a second, and negative when
it should be positive.  This was caused by the introduction of
nanoseconds 0.10.

- A zero length duration reported itself as positive when it should be
neither positive nor negative.

- In Perl 5.6.1/Red Hat Linux 7.2, multiplying a variable with value
zero by -1 gives negative-zero, which breaks tests.

   perl -e ' $x=0; $x*=-1; print $x '

   -0

Patch by Flavio Glock.

- Comparing a DateTime::Infinite object to a regular datetime could
cause a fatal error.  Reported by John Peacock.

[ BACKWARDS INCOMPATIBILITIES ]

- DateTime::Infinite objects no longer die is "set" methods are
called.  Instead, these methods are now no-op methods that simply